--- a/index.html
+++ b/index.html
@@ -1,4 +1,212 @@
 ---
 layout: base
 ---
-webinar.soedinennost.com
+
+
+<script type="text/javascript" src="/vendor/scrollmagic/minified/ScrollMagic.min.js"></script>
+<script type="text/javascript" src="/vendor/scrollmagic/TweenMax.min.js"></script>
+<script type="text/javascript" src="/vendor/scrollmagic/minified/plugins/animation.gsap.min.js"></script>
+<!-- script type="text/javascript" src="/vendor/scrollmagic/uncompressed/plugins/debug.addIndicators.js"></script -->
+
+<script type="text/javascript" src="/vendor/jquery-1.12.2.min.js"></script>
+
+<section class="jumbo">
+  <div class="container">
+    <h1 class="jumbo__header">Упёрся в&nbsp;потолок?</h1>
+    <div class="jumbo__row row">
+      <div class="jumbo__left col-xs-4">
+        <p class="jumbo__lead">Достиг приличного дохода?</p>
+        <p class="jumbo__lead">Уже давно на&nbsp;этом уровне?</p>
+        <p class="jumbo__lead">А&nbsp;что дальше?</p>
+        <p class="jumbo__offer">Есть система, которая позволяет
+          <br/>пробить &laquo;стеклянный потолок&raquo;</p>
+
+        <form class="jumbo__form" action="http://z.prorealnost.com/order_and_redirect.php" method="POST">
+          <div class="form-group">
+            <input type="email" name="email" class="form-control" placeholder="Введи сюда свой email" required="required"/>
+          </div>
+          <button type="submit" class="btn btn-warning btn-block jumbo__button"><span>ПОЛУЧИТЬ ЗАПИСЬ ВЕБИНАРА</span></button>
+          <input type="hidden" name="mailchimp-product-interest-id" value="5f768e5158" />
+          <input type="hidden" name="trello-list-id" value="575c2b0c97128eedf5326e75" />
+          <input type="hidden" name="redirect" value="http://soedinennost.com/webinar-enjoy/" />
+        </form>
+      </div>
+      <div class="jumbo__right col-xs-8">
+        <iframe width="710" height="399" src="https://www.youtube.com/embed/3cyn_pMake8?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+    <p class="jumbo__note">Подходит если зарабатываешь 50-250, но&nbsp;залип на&nbsp;этом уровне уже давно</p>
+  </div>
+</section>
+
+<section class="results">
+  <div class="container">
+    <h1 class="results__title">
+      <span>100%</span>
+      учеников, которые работали,
+      <br/>добиваются результатов
+    </h1>
+    <table class="results__table">
+      <tr class="results__table-row">
+        <td class="results__name">Саша Кайсин</td>
+        <td class="results__result">
+          <span>организует парусные регаты, cреди клиентов Альфа-Банк и&nbsp;Порш</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Надя Хохлова</td>
+        <td class="results__result">
+          <span>запустила собственный бренд модной одежды</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Максим Мартьянов</td>
+        <td class="results__result">
+          <span>стал эксклюзивным представителем компании EBC Brakes в России</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Константин Базоров</td>
+        <td class="results__result">
+          <span>открыл сеть магазинов спортивного оборудования в 4 городах</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Дмитрий Гейман</td>
+        <td class="results__result">
+          <span>открыл сеть химчисток</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Алексей Иванов</td>
+        <td class="results__result">
+          <span>открыл мастерскую дизайна интерьеров Geometrium</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Алексей Черновой</td>
+        <td class="results__result">
+          <span>стал крутым фотографом, организует фестиваль SunArt</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Александр Покровский</td>
+        <td class="results__result">
+          <span>открыл службу такси «Открытый город»</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Алексей Девятериков</td>
+        <td class="results__result">
+          <span>открыл школу виндсёрфинга на Канарах</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Максим Погребинский</td>
+        <td class="results__result">
+          <span>скинул 20 кг</span>
+        </td>
+      </tr>
+      <tr class="results__table-row">
+        <td class="results__name">Ирина Устьянцева</td>
+        <td class="results__result">
+          <span>дизайнер интерьеров, обучает людей в передаче «Квартирный вопрос» на НТВ</span>
+        </td>
+      </tr>
+    </table>
+  </div>
+</section>
+
+<section class="author">
+  <div class="author__text">
+    <div class="container">
+      <div class="row author__row">
+        <div class="col-xs-6">
+          <h1 class="author__title">Николай Воробьёв</h1>
+          <p class="author__subtitle">
+            тренирует 13&nbsp;лет, ведет программы на&nbsp;радио
+            <br/>и&nbsp;телевидении, пишет книги, достигает цели
+          </p>
+
+          <div class="author__coach">
+            <h2>Тренерский опыт</h2>
+            <p>Начал тренировать в&nbsp;2003&nbsp;году. Провёл тренинги в&nbsp;24&nbsp;городах России, Европы и&nbsp;Азии. Обучал сотрудников &laquo;Сбербанка&raquo;, &laquo;Яндекса&raquo;, &laquo;Альфа-Банка&raquo;.</p>
+            <p>С&nbsp;2006 по&nbsp;2010 ведущий тренер крупнейшей в&nbsp;мире компании, которая специализируется на&nbsp;знакомствах. С&nbsp;2010 тренер по&nbsp;достижению прорывных результатов, развитию личных качеств и&nbsp;созданию отношений. Автор 5&nbsp;книг, 15&nbsp;тренингов, обучил 15&nbsp;000&nbsp;человек.</p>
+          </div>
+          <div class="author__tv">
+            <h2>На&nbsp;телевидении</h2>
+            <p>2006&nbsp;&mdash; шоу &laquo;Правила съёма&raquo; на&nbsp;ТНТ&nbsp;&mdash; эксперт по&nbsp;соблазнению</p>
+            <p>2010&nbsp;&mdash; реалити-шоу &laquo;Pro Любoff&raquo; на&nbsp;1+1&nbsp;&mdash; тренер для женщин</p>
+            <p>2012&nbsp;&mdash; реалити-шоу &laquo;ПроРеальность&raquo;&nbsp;&mdash; автор и&nbsp;ведущий</p>
+            <p>2015&nbsp;&mdash; шоу &laquo;Парк&raquo; на&nbsp;&laquo;Первом&raquo;&nbsp;&mdash; передача про настоящих мужчин</p>
+          </div>
+          <div class="author__radio">
+            <h2>На&nbsp;радио</h2>
+            <p>Радио &laquo;Метро&raquo;&nbsp;&mdash; специальный выпуск про отношения</p>
+            <p>2011-2013&nbsp;&mdash; &laquo;Школа Соблазна&raquo; на&nbsp;&laquo;Подстер&raquo;&nbsp;&mdash; соавтор и&nbsp;ведущий</p>
+          </div>
+          <div class="author__books">
+            <h2>Книги</h2>
+            <p>Легкий способ бросить дрочить</p>
+            <p>Реальная любовь</p>
+            <p>Как стать богатым и&nbsp;успешным, оставаясь тупым и&nbsp;ленивым</p>
+            <p>Быстрое поднятие самооценки</p>
+            <p>Как встать с&nbsp;дивана и&nbsp;начать добиваться желаемого</p>
+          </div>
+          <div class="author__goals">
+            <h2>30&nbsp;личных достижений</h2>
+            <p>Поехать учиться в&nbsp;Германию&nbsp;&mdash; учился год</p>
+            <p>Получить сертификат MCSE&nbsp;&mdash; получил, и&nbsp;ещё 15&nbsp;разных сертификатов по&nbsp;IT</p>
+            <p>Пройти курс обучения парашютному спорту AFF&nbsp;&mdash; прошёл половину</p>
+            <p>Выучить английский, немецкий и&nbsp;испанский&nbsp;&mdash; английский на&nbsp;отлично, немецкий и&nbsp;испанский&nbsp;&mdash; могу лучше</p>
+            <p>Научиться продавать&nbsp;&mdash; создал отдел продаж из&nbsp;6&nbsp;человек и&nbsp;их&nbsp;научил</p>
+            <p>Построить собственный бизнес в&nbsp;сфере IT&nbsp;&mdash; занял&nbsp;25% своего рынка&nbsp;&mdash; 300 корпоративных клиентов</p>
+            <p>Открыть филиал в&nbsp;Москве&nbsp;&mdash; есть</p>
+            <p>Переехать жить в&nbsp;Москву&nbsp;&mdash; есть</p>
+            <p>Купить квартиру в&nbsp;центре&nbsp;&mdash; есть</p>
+            <p>Купить спортивную машину&nbsp;&mdash; есть</p>
+            <p>Построить отношения с&nbsp;чудесной девушкой&nbsp;&mdash; есть</p>
+            <p>Похудеть на&nbsp;20&nbsp;килограмм&nbsp;&mdash; есть на&nbsp;21</p>
+            <p>Нырнуть с&nbsp;моста в&nbsp;реку&nbsp;&mdash; есть</p>
+            <p>Выполнить норматив КМС по&nbsp;пауэрлифтингу&nbsp;&mdash; есть</p>
+            <p>Стать тренером&nbsp;&mdash; есть</p>
+            <p>Получить сертификат мастера НЛП&nbsp;&mdash; есть</p>
+            <p>Написать свой тренинг&nbsp;&mdash; есть x15</p>
+            <p>Выступить на&nbsp;радио&nbsp;&mdash; есть</p>
+            <p>Переехать жить в&nbsp;Киев&nbsp;&mdash; есть</p>
+            <p>Сделать своё реалити-шоу&nbsp;&mdash; есть два</p>
+            <p>Стать ведущим тренером в&nbsp;компании&nbsp;&mdash; есть</p>
+            <p>Провести тренинг за&nbsp;границей&nbsp;&mdash; есть, 7&nbsp;стран, тренингов больше</p>
+            <p>Провести тренинг на&nbsp;английском языке&nbsp;&mdash; есть</p>
+            <p>Получить ВНЖ в&nbsp;Европе&nbsp;&mdash; получил</p>
+            <p>Переехать жить в&nbsp;Прагу&nbsp;&mdash; есть</p>
+            <p>Написать и&nbsp;выпустить книгу&nbsp;&mdash; 3&nbsp;полноценные бумажные и&nbsp;несколько небольших электронных</p>
+            <p>Попасть в&nbsp;телевизор&nbsp;&mdash; много раз как эксперт на&nbsp;Первом, ТНТ, СТБ и&nbsp;даже один раз, как ведущий на&nbsp;1+1</p>
+            <p>Открыть тренинговую компанию&nbsp;&mdash; есть</p>
+            <p>Провести мастер-класс на&nbsp;1&nbsp;000 человек&nbsp;&mdash; есть</p>
+            <p>Сделать компанию международной&nbsp;&mdash; есть</p>
+            <p>Провести тренинги в&nbsp;20&nbsp;городах&nbsp;&mdash; есть</p>
+            <p>Я&nbsp;фанат достижения целей и&nbsp;тренер. Моя профессия&nbsp;&mdash; сделать так, чтобы у&nbsp;тебя получилось.</p>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="author__photo fixed">
+    <img src="/images/man.png"/>
+  </div>
+  <div class="author__photo-scroll-trigger"></div>
+</section>
+
+<script>
+  // init controller
+  var controller = new ScrollMagic.Controller();
+  // build scene
+  $(function () { // wait for document ready
+    var scene = new ScrollMagic.Scene({triggerElement: ".author__photo-scroll-trigger", triggerHook: "onEnter"})
+      .setPin(".author__photo")
+      //.addIndicators({name: "1 (duration: 300)"}) // add indicators (requires plugin)
+      .addTo(controller);
+  });
+</script>
