--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ layout: base
         </form>
       </div>
       <div class="jumbo__right col-xs-8">
-        <iframe width="710" height="399" src="https://www.youtube.com/embed/3cyn_pMake8?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+        <iframe width="710" height="399" src="https://www.youtube.com/embed/VyZ-mZMqjbQ?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
     <p class="jumbo__note">Подходит если зарабатываешь 50-250, но&nbsp;залип на&nbsp;этом уровне уже давно</p>
