--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ layout: base
         <p class="jumbo__offer">Есть система, которая позволяет
           <br/>пробить &laquo;стеклянный потолок&raquo;</p>
 
-        <form class="jumbo__form" action="http://z.prorealnost.com/order_and_redirect.php" method="POST">
+        <form class="jumbo__form" action="http://z.prorealnost.com/order_and_redirect.php" method="POST" onsubmit="yaCounter{{ site.yandex_metrika }}.reachGoal('landing-form-submit'); ga('send', 'action', 'button', 'click', 'landing-form-submit'); return true;">
           <div class="form-group">
             <input type="email" name="email" class="form-control" placeholder="Введи сюда свой email" required="required"/>
           </div>
           <button type="submit" class="btn btn-warning btn-block jumbo__button"><span>ПОЛУЧИТЬ ЗАПИСЬ ВЕБИНАРА</span></button>
           <input type="hidden" name="mailchimp-product-interest-id" value="5f768e5158" />
           <input type="hidden" name="trello-list-id" value="575c2b0c97128eedf5326e75" />
-          <input type="hidden" name="redirect" value="http://soedinennost.com/webinar-enjoy/" />
+          <input type="hidden" name="redirect" value="http://webinar.soedinennost.com/enjoy/" />
         </form>
       </div>
       <div class="jumbo__right col-xs-8">
