--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: base
         <p class="jumbo__offer">Есть система, которая позволяет
           <br/>пробить &laquo;стеклянный потолок&raquo;</p>
 
-        <form class="jumbo__form" action="http://z.prorealnost.com/order_and_redirect.php" method="POST" onsubmit="yaCounter{{ site.yandex_metrika }}.reachGoal('landing-form-submit'); ga('send', 'action', 'button', 'click', 'landing-form-submit'); return true;">
+        <form class="jumbo__form" action="http://z.prorealnost.com/order_and_redirect.php" method="POST" onsubmit="yaCounter{{ site.yandex_metrika }}.reachGoal('landing-form-submit'); return true;">
           <div class="form-group">
             <input type="email" name="email" class="form-control" placeholder="Введи сюда свой email" required="required"/>
           </div>
