--- a/enjoy.html
+++ b/enjoy.html
@@ -10,7 +10,7 @@ permalink: /enjoy/
       <a class="btn btn-danger" href="http://soedinennost.com/pobeditel-2/" target="_blank" onclick="yaCounter{{ site.yandex_metrika }}.reachGoal('webinar-training-click'); return true;">Записаться на тренинг</a>
     </p>
     <div class="flex-video widescreen">
-      <iframe width="853" height="480" src="https://www.youtube.com/embed/bXZQOMH4Og0?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
+      <iframe width="853" height="480" src="https://www.youtube.com/embed/swHo_lAL86c?rel=0&showinfo=0" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 </section>
