--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: base
+style: index
 ---
 
 <script type="text/javascript" src="/vendor/scrollmagic/minified/ScrollMagic.min.js"></script>
