--- a/enjoy.html
+++ b/enjoy.html
@@ -35,7 +35,7 @@ style: enjoy
                 <li>3. Один из трёх обучающих комплектов на выбор</li>
               </ol>
             </div>
-            <a class="btn btn-warning btn-block enjoy__button" href="https://vk.com/podarki_webinar" target="_blank" onclick="yaCounter{{ site.yandex_metrika }}.reachGoal('webinar-gift-click'); ga('send', 'event', 'button', 'click', 'gift'); return true;">ВСТУПИТЬ В&nbsp;ГРУППУ<br/>И&nbsp;ПОЛУЧИТЬ ПОДАРКИ</a>
+            <a class="btn btn-warning btn-block enjoy__button" href="https://vk.com/podarki_webinar" target="_blank" onclick="yaCounter{{ site.yandex_metrika }}.reachGoal('webinar-gift-click'); ga('send', 'event', 'button', 'click', 'gift'); ga('send', 'pageview', '/gift/'); return true;">ВСТУПИТЬ В&nbsp;ГРУППУ<br/>И&nbsp;ПОЛУЧИТЬ ПОДАРКИ</a>
             <div class="enjoy__note">
               <p>Кстати, у меня есть тренинг «Победитель», на котором я возьму тебя за руку и доведу до прорывных результатов.</p>
               <p><a href="http://pobeditel.soedinennost.com/" target="_blank" onclick="yaCounter{{ site.yandex_metrika }}.reachGoal('webinar-training-click'); ga('send', 'event', 'button', 'click', 'training'); return true;">Узнать про тренинг подробнее</a></p>
